# kaggle

./: .flake8  .isort.cfg  .pre-commit-config.yaml  README.md  jane-street-market-prediction.ipynb  requirements.txt  requirements_dev.txt
competitions/titanic/lib/: pyproject.toml  requirements.txt
competitions/titanic/lib/src/: __init__.py  config.py  parquet_io.py  passenger.py  transform.py
data_processing/: pyproject.toml  requirements.txt
data_processing/src/backend/: backend.py  base.py  config.py  local_backend.py
data_processing/src/backend/instruction/: config.py  instruction_library.py
data_processing/src/io/: common.py  dataset_reference.py  reader.py  record.py  record_collector.py  record_formatter.py  writer.py
data_processing/src/operation/: __init__.py  base.py  config.py  internal.py  merge.py  protocol.py
data_processing/src/operation/consumer/: base.py
data_processing/src/operation/filter/: __init__.py  base.py  config.py  drop_empty.py
data_processing/src/operation/filters/: chain.py  config.py  drop_empty.py
data_processing/src/operation/map_reducer/: base.py
data_processing/src/operation/mapper/: __init__.py  base.py  config.py  eval_expression.py  filter_chain.py  filter_chain_config.py  filter_library.py  mapper_chain.py  mapper_chain_config.py  mapper_library.py  merge.py  shuffle.py
data_processing/src/operation/producer/: __init__.py  base.py  config.py  from_kaggle.py
data_processing/src/operation/runner/: __init__.py  base.py  bash.py  config.py
data_processing/src/operations/: __init__.py  base.py  config.py  create.py  map.py  map_reduce.py  merge.py  protocol.py
data_processing/src/operations/consumer/: base.py
data_processing/src/operations/create/: base.py  config.py  from_kaggle.py
data_processing/src/operations/filters/: __init__.py  base.py  chain.py  config.py  drop_domains.py  drop_empty.py  drop_if_regexp_match.py
data_processing/src/operations/produce/: config.py
data_processing/src/operations/producer/: config.py  from_kaggle.py
data_processing/src/operations/runner/: base.py  config.py
data_processing/tests/backend/instruction/: test_instruction_library.py
data_processing/tests/io/: test_record_formatter.py  test_writer.py
data_processing/tests/mapper/: test_filter_library.py  test_mapper_library.py
training/: pyproject.toml  requirements.txt
util/: pyproject.toml  requirements.txt
(+52 files in other folders)
