[project]
name = "fess38.data_processing"
version = "2023.11.15"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.package-dir]
"fess38.data_processing" = "src"
"fess38.data_processing.backend" = "src/backend"
"fess38.data_processing.io" = "src/io"
"fess38.data_processing.operations" = "src/operations"
"fess38.data_processing.operations.consumer" = "src/operations/consumer"
"fess38.data_processing.operations.filters" = "src/operations/filters"
"fess38.data_processing.operations.producer" = "src/operations/producer"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
