[project]
name = "fess38.data_processing"
version = "2023.11.15"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.package-dir]
"fess38.data_processing" = "src"
"fess38.data_processing.backend" = "src/backend"
"fess38.data_processing.io" = "src/io"
"fess38.data_processing.operation" = "src/operation"
"fess38.data_processing.operation.consumer" = "src/operation/consumer"
"fess38.data_processing.operation.filter" = "src/operation/filter"
"fess38.data_processing.operation.mapper" = "src/operation/mapper"
"fess38.data_processing.operation.producer" = "src/operation/producer"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
