[project]
name = "fess38.competitions.titanic.lib"
version = "2023.10.14"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["fess38.competitions.titanic.lib"]
package-dir = { "fess38.competitions.titanic.lib" = "src" }

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
